--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -430,7 +430,7 @@ Three standard regression metrics were used to evaluate both models on the held-
         \textbf{Model} & \textbf{MAE} & \textbf{RMSE} & \textbf{$R^2$} \\
         \midrule
         Linear Regression & 0.0534 & 0.0844 & 0.7882 \\
-        \rowcolor{solarblue!8} Random Forest Regressor & \textbf{0.0186} & \textbf{0.0361} & \textbf{0.9613} \\
+        \rowcolor{solarblue!8} Random Forest Regressor & \textbf{0.0278} & \textbf{0.0543} & \textbf{0.9123} \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -443,7 +443,7 @@ The Random Forest Regressor significantly outperforms Linear Regression across a
     \item The Random Forest achieves an $R^2$ of 0.9112 on the test set, explaining over 91\% of the variance in capacity factor. Linear Regression explains approximately 79\%.
     \item The MAE for Random Forest (0.0280) is roughly half that of Linear Regression (0.0534), meaning its average prediction error is about 2.8 percentage points on the capacity factor scale.
     \item The close alignment between training and testing metrics for Linear Regression (MAE: 0.0534 vs 0.0534) confirms it is not overfitting, but its linear assumption limits its ceiling.
-    \item The Random Forest shows a gap between training $R^2$ (0.9613) and test $R^2$ (0.9112), which is expected for ensemble methods and is within acceptable bounds given the dataset size.
+    \item The close alignment between training $R^2$ (0.9123) and test $R^2$ (0.9112) confirms that the Random Forest is generalising well and not overfitting, aided by the \texttt{max\_depth=12} constraint.
 \end{itemize}
 
 % Section 7
